--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -1,17 +1,16 @@
-<div id="content">
+<div id="content" class="container">
 
 	<header class="page-header">
 		<h1>Admins</h1>
 	</header>
 
-	<%= form_tag({ action: "admins" }, class: "form-horizontal") do %>
+	<%= form_tag({ action: "admins" }) do %>
 	<div class="form-group">
-		<label class="control-label col-2" for="inputAdmins">Admin ids</label>
 		<div class="col-10">
-			<textarea id="inputAdmins" name="admins" class="form-control"><%= @admins %></textarea>
+			<textarea id="inputAdmins" name="admins" class="form-control" style="height:10em;"><%= @admins %></textarea>
 			<%= submit_tag 'Save', class:'btn' %>
 		</div>
 	</div>
 	<% end %>
-	
+
 </div>
