--- a/app/views/homepage/profile.html.erb
+++ b/app/views/homepage/profile.html.erb
@@ -4,7 +4,7 @@
 		<h1>Profile</h1>
 	</header>
 
-	<%= form_tag '/homepage/save_profile', :class => 'form-horizontal' do |f| %>
+	<%= form_tag '/homepage/save_profile' do |f| %>
 		<div class="form-group">
 			<label class="col-2 control-label" for="user_name">Full name</label>
 			<div class="col-10">
