--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="col-lg-2" id="schedule">
+	<div class="col-md-2" id="schedule">
 	</div>
-	<div class="col-lg-8" id="content">
+	<div class="col-md-8" id="content">
 	
 			<% if flash[:error] %>
 			<div class="alert alert-error">
@@ -54,12 +54,11 @@
 	</div>
 
 	<% if logged_in? %>
-	<div class="col-lg-2" id="comments-column">
+	<div class="col-md-2" id="comments-column">
 		<%= render 'comments' %>
 	</div>
 	<% end %>
 
 </div>
-
 
 <%= render 'auto_save_form' if @has_form %>
