--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col-md-2" id="schedule">
+	<div class="col-md-2" id="schedule-column">
 	</div>
 	<div class="col-md-8" id="content">
 	
