--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -123,6 +123,7 @@ section h1
 
 section h2
 {
+	margin-top:1.5em;
 	font-size:1.2em;
 }
 
@@ -225,29 +226,48 @@ section .video-js
 	width:auto !important;
 }
 
-section table
+/****************************************************************************
+ *  tables and forms in document
+ *
+ */
+
+section .kramdown-table
 {
-	margin-bottom:1em;
+	border:1px solid #DFDFDF;
+	border-radius:10px;
+	margin:1em 0;
 }
 
-section table th
+section .kramdown-table th
 {
 	text-align:left;
 }
 
-section table input[type=text]
+section .kramdown-table input[type=text]
 {
 	margin-bottom:0;
 }
 
-section table.table-padded td, table.table-padded th
+section .kramdown-table td, .kramdown-table th
 {
 	padding:0.5em 1em;
 }
 
-section table.table-padded tr:last-child td
+section .kramdown-table tr:last-child td
 {
 	padding-bottom:1em;
+}
+
+section input[type=text]
+{
+	border:none;
+	border-bottom:1px solid black;
+}
+
+section textarea
+{
+	border:1px solid black;
+	width:100%;
 }
 
 /****************************************************************************
