--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -26,7 +26,7 @@
 						<a href="#<%= subpage.slug %>" data-target="#<%= subpage.slug %>-content" data-toggle="tab"><%= subpage.title %></a>
 					</li>
 					<% end %>
-					<% if @page.pset %>
+					<% if logged_in? and @page.pset %>
 					<li>
 					  <a href="#submit" data-target="#submit-content" data-toggle="tab">Submit <%= submitted_icon %></a>
 					</li>
@@ -36,7 +36,7 @@
 			</header>
 
 
-			<%= form_tag({ :controller => 'upload', :action => 'submit' }, { :multipart => true, :id => "page_form" }) do %>
+			<%= form_tag_if(logged_in? && @page.pset && @page.pset.form, upload_submit_url, { :multipart => true, :id => "page_form" }) do %>
 			<%= hidden_field_tag :page_id, @page.id %>
 			<div class="tab-content">
 
@@ -46,7 +46,7 @@
 				</section>
 				<% end %>
 
-				<% if @page.pset %>
+				<% if logged_in? and @page.pset %>
 				<section class="tab-pane markdown" id="submit-content">
 					<%= render 'submit_tab' %>
 				</section>
