--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -81,7 +81,7 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 
 #content .row
 {
-	margin:1em 0;
+/*	margin:1em 0;*/
 }
 
 #content header .nav > li > a /* the pills below the page's H1 */
