--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,8 +41,8 @@
 					<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
 					<li class="divider"></li>
 					<% end %>
-					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Edit Profile'.html_safe, :controller => 'homepage', :action => 'profile' %></li>
-					<li><%= link_to '<i class="glyphicon glyphicon-ban-circle"></i> Logout'.html_safe, :controller => 'homepage', :action => 'logout' %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Edit Profile'.html_safe, :controller => 'profile' %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-ban-circle"></i> Logout'.html_safe, :controller => 'profile', :action => 'logout' %></li>
 				</ul>
 			</li>
 			<% else %>
