--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -1,6 +1,6 @@
 <% if @submitted %>
 <div class="alert alert-success" style="border:0; border-radius:0;">
-	You have submitted this problem set <%= time_ago_in_words(@page.pset.submit_from(@user).submitted_at) %> ago.
+	You have submitted this problem set <%= time_ago_in_words(@page.pset.submit_from(current_user).submitted_at) %> ago.
 </div>
 <% end %>
 
@@ -44,8 +44,6 @@
 
 <% end %>
 
-<% if logged_in? %>
-
 <p>Notes: <%= text_area_tag 'notes', nil, class:'form-control' %></p>
 
 <p><%= submit_tag 'Submit for grading', class:'btn btn-warning' %></p>
@@ -55,10 +53,3 @@ $('#page_form').submit(function(){
 	$('input[type=submit]', this).attr('disabled', 'disabled');
 });
 </script>
-
-<% else %>
-
-<p>Please login to submit.</p>
-
-<% end %>
-
