--- a/app/views/admin/_grade_table.html.erb
+++ b/app/views/admin/_grade_table.html.erb
@@ -1,6 +1,8 @@
 <table class="table table-bordered table-condensed">
 
 	<tr>
+		<th>Active</th>
+		<th>Done</th>
 		<th>Name</th>
 		<th>ID</th>
 		<% @psets.each do |pset| %>
@@ -10,6 +12,8 @@
 
 	<% users.each do |user| %>
 	<tr>
+		<td><%= check_box_tag "active#{user.id}", 'yes', user.active, :onclick => "$.post('/admin/enable', { id:'#{user.id}', active:$(this).is(':checked') });" %></td>
+		<td><%= check_box_tag "done#{user.id}", 'yes', user.done, :onclick => "$.post('/admin/done', { id:'#{user.id}', done:$(this).is(':checked') });" %></td>
 		<td>
 			<% if user.mail %>
 			<%= link_to user.name, 'mailto:' + user.mail %>
