--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -41,5 +41,4 @@
 </p>
 
 
-<%= link_to 'Edit', edit_grade_path(@grade) %> |
-<%= link_to 'Back', grades_path %>
+<%= link_to 'Edit', edit_submit_grade_path(@grade) %> |
