--- a/app/views/admin/_grade_table.html.erb
+++ b/app/views/admin/_grade_table.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-condensed">
+<table id="grade-table" class="table table-bordered table-condensed">
 
 	<tr>
 		<th>Active</th>
@@ -25,11 +25,13 @@
 		<% @psets.each do |pset| %>
 		<td>
 			<% if submitted = user.submit(pset) %>
-			<% if submitted.grade and not submitted.grade.grade.blank? %>
-			<%= link_to "#{submitted.grade.grade}", edit_grade_url(id: submitted.id) %>
+				<% if submitted.grade and not submitted.grade.grade.blank? %>
+				<%= link_to "#{submitted.grade.grade}", edit_submit_grade_url(submit_id: submitted.id), class: 'btn btn-primary' %>
+				<% else %>
+				<%= link_to 'sub', new_submit_grade_url(submit_id: submitted.id), class: 'btn btn-default' %>
+				<% end %>
 			<% else %>
-			<%= link_to 'sub', edit_grade_url(id: submitted.id) %>
-			<% end %>
+				<%= link_to 'no', admin_create_submit_url(user_id: user.id, pset_id: pset.id), method: :post, class:'btn btn-default auto-hide' %>
 			<% end %>
 		</td>
 		<% end %>
