--- a/app/views/admin/admins.html.erb
+++ b/app/views/admin/admins.html.erb
@@ -4,7 +4,9 @@
 		<h1>Admins</h1>
 	</header>
 
-	<%= form_tag({ action: "admins" }) do %>
+	<b>Admins</b>
+	
+	<%= form_tag({ action: "admins" }, method: :post) do %>
 	<div class="form-group">
 		<div class="col-10">
 			<textarea id="inputAdmins" name="admins" class="form-control" style="height:10em;"><%= @admins %></textarea>
@@ -13,4 +15,15 @@
 	</div>
 	<% end %>
 
+	<b>Assistants</b>
+
+	<%= form_tag(admin_assistants_url, method: :post) do %>
+	<div class="form-group">
+		<div class="col-10">
+			<textarea id="inputAdmins" name="assistants" class="form-control" style="height:10em;"><%= @assistants %></textarea>
+			<%= submit_tag 'Save', class:'btn' %>
+		</div>
+	</div>
+	<% end %>
+	
 </div>
