--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -41,7 +41,7 @@
 					<li><%= link_to '<i class="glyphicon glyphicon-list-alt"></i> Grading list'.html_safe, :controller => 'admin', :action => 'grading_list' %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-arrow-down"></i> Update courseware...'.html_safe, '/admin/import_do', method: :post %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Admins'.html_safe, :controller => 'admin', :action => 'admins' %></li>
-					<li><%= link_to '<i class="glyphicon glyphicon-download-alt"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-cloud"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
 					<li class="divider"></li>
 					<% end %>
 					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Edit Profile'.html_safe, :controller => 'profile' %></li>
