--- a/app/views/grades/_grade_table.html.erb
+++ b/app/views/grades/_grade_table.html.erb
@@ -12,8 +12,8 @@
 
 	<% users.each do |user| %>
 	<tr>
-		<td><%= check_box_tag "active#{user.id}", 'yes', user.active, :onclick => "$.post('/admin/enable', { id:'#{user.id}', active:$(this).is(':checked') });" %></td>
-		<td><%= check_box_tag "done#{user.id}", 'yes', user.done, :onclick => "$.post('/admin/done', { id:'#{user.id}', done:$(this).is(':checked') });" %></td>
+		<td><%= check_box_tag "active#{user.id}", 'yes', user.active, :onclick => "$.post('/grades/enable', { id:'#{user.id}', active:$(this).is(':checked') });" %></td>
+		<td><%= check_box_tag "done#{user.id}", 'yes', user.done, :onclick => "$.post('/grades/done', { id:'#{user.id}', done:$(this).is(':checked') });" %></td>
 		<td>
 			<% if user.mail %>
 			<%= link_to user.name, 'mailto:' + user.mail %>
