--- a/app/views/grades/users.html.erb
+++ b/app/views/grades/users.html.erb
@@ -3,7 +3,7 @@
 	<header class="page-header">
 		<h1>Users</h1>
 		<ul class="nav nav-pills">
-			<% Group.all.each_with_index do |group,i| %>
+			<% Group.order(:name).all.each_with_index do |group,i| %>
 			<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group.name %> (<%= group.users.count %>)</a></li>
 			<% end %>
 			<li <%= 'class="active"'.html_safe if Group.count == 0 %>><a href="#other" data-toggle="tab">Other (<%= @groupless.count %>)</a></li>
