--- a/app/views/grades/users.html.erb
+++ b/app/views/grades/users.html.erb
@@ -9,6 +9,7 @@
 			<li <%= 'class="active"'.html_safe if Group.count == 0 %>><a href="#other" data-toggle="tab">Other (<%= @groupless.count %>)</a></li>
 			<li><a href="#done" data-toggle="tab">Done (<%= @done.count %>)</a></li>
 			<li><a href="#inactive" data-toggle="tab">Inactive (<%= @inactive.count %>)</a></li>
+			<li><a href="#admins" data-toggle="tab">Admins (<%= @admins.count %>)</a></li>
 			<li><a href="#import" data-toggle="tab">Import</a></li>
 		</ul>
 	</header>
@@ -27,6 +28,9 @@
 		</section>
 		<section class="tab-pane" id="inactive">
 			<%= render partial: 'grade_table', locals: { users: @inactive } %>
+		</section>
+		<section class="tab-pane" id="admins">
+			<%= render partial: 'grade_table', locals: { users: @admins } %>
 		</section>
 		<section class="tab-pane" id="import">
 			<p>Paste all data lines from a .xls datanose user export.</p>
