--- a/app/views/grades/_grade_table.html.erb
+++ b/app/views/grades/_grade_table.html.erb
@@ -1,4 +1,4 @@
-<table id="grade-table" class="table table-bordered table-condensed">
+<table id="grade-table" class="table table-condensed">
 
 	<tr>
 		<th>Active</th>
