--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,7 +44,7 @@
 					<li><%= link_to '<i class="glyphicon glyphicon-asterisk"></i> Manage dropbox'.html_safe, :controller => 'admin', :action => 'dropbox' %></li>
 					<li class="divider"></li>
 					<% end %>
-					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Edit Profile'.html_safe, :controller => 'profile' %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Grades'.html_safe, :controller => 'profile', :action => 'grades' %></li>
 					<li><%= link_to '<i class="glyphicon glyphicon-ban-circle"></i> Logout'.html_safe, :controller => 'profile', :action => 'logout' %></li>
 				</ul>
 			</li>
