show final grade

--- a/app/views/profile/grades.html.erb
+++ b/app/views/profile/grades.html.erb
@@ -25,6 +25,10 @@
 			<td>Style</td>
 			<td><%= grade.style %>
 		</tr>
+		<tr>
+			<td>Final</td>
+			<td><%= grade.grade %>
+		</tr>
 	</table>
 	
 	<%= simple_markdown(grade.comments) %>
