--- a/app/assets/stylesheets/strap.css.scss
+++ b/app/assets/stylesheets/strap.css.scss
@@ -22,6 +22,7 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 .navbar
 {
 	background-color: #449E1F;
+	margin-bottom:0;
 }
 
 .navbar .navbar-brand
@@ -68,7 +69,7 @@ body > .row /* shouldn't be necessary according to bootstrap docs? */
 
 #content
 {
-	margin: 0em auto;
+	margin: 2em auto;
 	background-color: #fff;
 	padding:2em 4em;
 	border:1px solid  #D9D9D9;
@@ -442,4 +443,12 @@ form .btn
 #grade-table
 {
 	font-size:0.8em;
+}
+
+body > .alert
+{
+	border-radius:0;
+	border-top:none;
+	border-left:none;
+	border-right:none;
 }
