--- a/app/views/dropbox/index.html.erb
+++ b/app/views/dropbox/index.html.erb
@@ -5,14 +5,14 @@
 	</header>
 
 	<p>
-		<% if @dropbox_session %>
+		<% if @dropbox_linked %>
 		Dropbox is currently connected.
 		<% else %>
 		There is no Dropbox connection.
 		<% end %>
 	</p>
 	
-	<%= form_tag({ action: "dropbox" }) do %>
+	<%= form_tag({ action: "connect" }) do %>
 	<div class="form-group">
 		<label class="control-label col-2" for="inputAppKey">App Key</label>
 		<div class="col-10">
