--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,37 +1,44 @@
-<h1>Listing grades</h1>
+<div id="content" class="container">
 
-<table>
-  <tr>
-    <th>Submit</th>
-    <th>Grader</th>
-    <th>Scope</th>
-    <th>Correctness</th>
-    <th>Design</th>
-    <th>Style</th>
-    <th>Comments</th>
-    <th>Grade</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+	<header class="page-header">
+		<h1>Users</h1>
+		<ul class="nav nav-pills">
+			<% Group.order(:name).all.each_with_index do |group,i| %>
+			<li <%= 'class="active"'.html_safe if i==0 %>><a href="#group<%= i %>" data-toggle="tab"><%= group.name %> (<%= group.users.count %>)</a></li>
+			<% end %>
+			<li <%= 'class="active"'.html_safe if Group.count == 0 %>><a href="#other" data-toggle="tab">Other (<%= @groupless.count %>)</a></li>
+			<li><a href="#done" data-toggle="tab">Done (<%= @done.count %>)</a></li>
+			<li><a href="#inactive" data-toggle="tab">Inactive (<%= @inactive.count %>)</a></li>
+			<li><a href="#admins" data-toggle="tab">Admins (<%= @admins.count %>)</a></li>
+			<li><a href="#import" data-toggle="tab">Import</a></li>
+		</ul>
+	</header>
 
-<% @grades.each do |grade| %>
-  <tr>
-    <td><%= grade.submit.pset.name %></td>
-    <td><%= grade.grader %></td>
-    <td><%= grade.scope %></td>
-    <td><%= grade.correctness %></td>
-    <td><%= grade.design %></td>
-    <td><%= grade.style %></td>
-    <td><%= grade.comments %></td>
-    <td><%= grade.grade %></td>
-    <td><%= link_to 'Show', grade %></td>
-    <td><%= link_to 'Edit', edit_grade_path(grade) %></td>
-    <td><%= link_to 'Destroy', grade, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+	<div class="tab-content">
+		<% Group.order(:name).all.each_with_index do |group,i| %>
+		<section class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
+			<%= render partial: 'grade_table', locals: { users: group.users } %>
+		</section>
+		<% end %>
+		<section class="tab-pane <%= 'active' if Group.count == 0 %>" id="other">
+			<%= render partial: 'grade_table', locals: { users: @groupless } %>
+		</section>
+		<section class="tab-pane" id="done">
+			<%= render partial: 'grade_table', locals: { users: @done } %>
+		</section>
+		<section class="tab-pane" id="inactive">
+			<%= render partial: 'grade_table', locals: { users: @inactive } %>
+		</section>
+		<section class="tab-pane" id="admins">
+			<%= render partial: 'grade_table', locals: { users: @admins } %>
+		</section>
+		<section class="tab-pane" id="import">
+			<p>Paste all data lines from a .xls datanose user export.</p>
+			<%= form_tag '/admin/import_groups', :method => :post do %>
+			<textarea name="paste" class="form-control"></textarea>
+			<p><input type="submit" class="btn"></p>
+			<% end %>
+		</section>
+	</div>
 
-<br />
-
-<%= link_to 'New Grade', new_grade_path %>
+</div>
