--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -2,6 +2,13 @@
 	<div class="col-md-2" id="schedule-column">
 	</div>
 	<div class="col-md-8" id="content">
+
+		<% if @submitted %>
+		<div id="submitted_pset" class="alert alert-success">
+			You have submitted this problem set <%= time_ago_in_words((@page.pset.submit_from(current_user).submitted_at or Time.now)) %> ago.
+		</div>
+		<% end %>
+
 		<header class="page-header">
 			<h1><%= title %></h1>
 			<% if @page.pset or @page.subpages.count > 1 %>
