fix importing student groups

--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -34,7 +34,7 @@
 		</section>
 		<section class="tab-pane" id="import">
 			<p>Paste all data lines from a .xls datanose user export.</p>
-			<%= form_tag '/admin/import_groups', :method => :post do %>
+			<%= form_tag course_import_groups_path, :method => :post do %>
 			<textarea name="paste" class="form-control"></textarea>
 			<p><input type="submit" class="btn"></p>
 			<% end %>
