--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -43,7 +43,7 @@
 					<li class="divider"></li>
 					<% end %>
 					<% if is_assistant? %>
-					<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> List users'.html_safe, grades_path %></li>
+					<li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading'.html_safe, grades_path %></li>
 					<% else %>
 					<li><%= link_to '<i class="glyphicon glyphicon-user"></i> Grades'.html_safe, profile_grades_path %></li>
 					<% end %>
