--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -15,7 +15,7 @@
 	<div class="col-lg-6">
 		<div class="field">
 			<%= f.label :grader %><br />
-			<%= f.text_field :grader, class: 'form-control', disabled: true, value: User.where(name: @grade.grader).first.name %>
+			<%= f.text_field :grader, class: 'form-control', disabled: true, value: User.where(uvanetid: @grade.grader).first.name %>
 		</div>
 		<div class="field">
 			<%= f.label :scope %><br />
