--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -17,7 +17,7 @@
 	<div class="tab-content">
 		<% Group.order(:name).all.each_with_index do |group,i| %>
 		<section class="tab-pane <%= 'active' if i==0 %>" id="group<%= i %>">
-			<%= render partial: 'grade_table', locals: { users: group.users.where(active:true, done:false) } %>
+			<%= render partial: 'grade_table', locals: { users: group.users.where(active:true, done:false).order(:name) } %>
 		</section>
 		<% end %>
 		<section class="tab-pane <%= 'active' if Group.count == 0 %>" id="other">
