--- a/app/views/grades/edit.html.erb
+++ b/app/views/grades/edit.html.erb
@@ -1,7 +1,7 @@
 <div id="content" class="container">
 
 	<header class="page-header">
-		<h1>Editing grade</h1>
+		<h1>Grading <%= @grade.submit.pset.name %> by <%= @grade.submit.user.name %></h1>
 	</header>
 
 	<%= render 'form' %>
